# email-address-extractor

./: .gitignore  Cargo.toml  README.md
samples/: file.html  file.odp  file.ods  file.sql  file.txt  file.xlsx  file.xml
src/: file.rs  main.rs
